# String

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Core.h  Doxyfile  DynamicString.h  Exceptions.h  LICENSE  README.md  String.cpp  String.files  String.h  StringBuilder.cpp  StringBuilder.h  StringFormatting.h  StringView.cpp  StringView.h
include/: Core.h  String.h  StringBuilder.h  StringView.h
src/: Core.h  String.cpp  StringBuilder.cpp
test/: main.cpp
